--- a/index.html
+++ b/index.html
@@ -143,6 +143,6 @@
 			</div>
 		</div>
 		<div id="bg"></div>
-		<img class="close_btn" src="http://www.youyu001.com/res/htmlclassics/full/images/close_btn.png" title="关闭" onclick="closeImage()" />
+		<img class="close_btn" src="https://tse3-mm.cn.bing.net/th/id/OIP-C.HcGQbPO0oVS8uN9WWWvqMAAAAA?rs=1&pid=ImgDetMain" title="关闭" onclick="closeImage()" />
 	</body>
 </html>
