--- a/index.html
+++ b/index.html
@@ -2,165 +2,117 @@
 <html>
 	<head>
 		<script src="https://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
-		<title>内容</title>
-		<meta charset="utf-8" />
+		<title>内容指示页</title>
+		<meta charset="utf-8">
 		<style type="text/css">
 			html,body{
-				width:100%;
-				height:100%;
-				margin:0px;
-				background-image:url('https://www.ccam.org.cn/CN/static/img/173.jpg');
-				background-size: cover;
-			}
-			#main{
-				width:100%;
-				height:100%;
-			}
-			#header{
-				width:100%;
-				min-width:1200px;
-				height:150px;
-				background-color:white:
-			}
-			#header >div{
-				width:1200px;
-				heigth:70px;
-				margin:0px auto;
-				display:flex;
-				justify-content:space-between;
-				align-items:center;
-			}
-			#header_center >img{
-				width:200px;
-			}
-			#header_center_right{
-				width:300px;
-				height:100%;
-				display: flex;
-				transition:all 0.5s ease;
-			}
-			#header_center_right img{
-				width: 30px;
-			}
-			#header_center_right > div{
-				width: 150px;
-				display:flex;
-				justify-content: flex-end;
-				align:items: center;
-			}
-			#link{
-				width: 1200px;
-				height: 500px;
-				margin: 40px auto;
-				flex-wrap:wrap;
-				display: flex;
-				justify-content: space-between;
-				flex-direction: row; 
-			}
-			#link > div{
-				width:280px;
-				height: 320px;
-				display:flex;
-				justify-content: center;
-			}
-			#link img{
-				width:280px;
-				height: 185px;
-				border-radius: 5px;
-				cursor: zoom-in;
-				transition: all 0.6s;  
-			}
-			#bg{
-			      	position:absolute;
-			      	top:0px;
-			      	left:0px;
-			      	background-color:#ffffff;
-			        width:100%;
-			      	height:100%;
-			      	background-repeat:no-repeat;
-			      	background-position:center;
-			      	background-size:80% auto;
-			      	display:none;
-			}
-			.close_btn{
-			        position:absolute;
-			      	top:30px;
-			      	right:30px;
-			      	cursor:pointer;
-			      	display:none;
-			      }
-			
-			#link img:hover {  
-				transform: scale(1.4);  
-			}
-		</style>		
-		<script type="text/javascript">
-		      $(function(){
-		      	$("#link img").click(function(){
-		      		$("#bg").css("background-image","url('"+this.src+"')");
-		      		$("#bg").css("display","block");
-		      		$(".close_btn").css("display","block");
-		      	});
-				
-				$(".close_btn").click(function(){
-					$("#bg").css("display","none");
-					$(".close_btn").css("display","none");
-				});
-		      });
-			  
-			  function change(){
-			  	document.getElementById("header_center_right").style.transform="scale(1.1)";
-			  	}
-			  function reset(){
-			  	document.getElementById("header_center_right").style.transform="scale(1)";
-			  	}
-		    </script>
+				width: 100%;
+				margin: 0px;
+				}
+				#main{
+					width: 100%;
+					min-height: 800px;
+					background-color: #ebebeb;
+				}
+				#main > img{
+					width: 100%;
+				}
+				#header{
+					width: 100%;
+					min-width: 1100px;
+					height: 80px;
+					background-color: white;
+					position: fixed;
+				}
+				#header > div{
+					width: 1100px;
+					height: 100%;
+					line-height: 80px;
+					margin: 0px auto;
+					display: flex;
+					justify-content: space-between;
+				}
+				#logo > img{
+					height: 30px;
+					background-color: white;
+					margin-top: 22px;
+				}
+				#center{
+					width: 600px;
+					height: 100%;
+					display: flex;
+					justify-content: space-between;
+				}
+				#center > div{
+					min-width: 50px;
+					font-size: 14px;
+					color: #333333;
+				}
+				#right{
+					width: 150px;
+					display: flex;
+					align-items: center;
+				}
+				#right > span{
+					font-family: Microsoft YaHei, Arial, Helvetica, sans-serif;
+					margin-left: 4px;
+				}
+				#buy{
+					width: 18px;
+				}
+				#arrow{
+					width: 12px;
+					height: 12px;
+					margin-left: 2px;
+				}
+				#search{
+					width: 20px;
+					margin-left: 30px;
+				}
+				a{
+				    color:#000000;
+				    text-decoration:none;
+				    margin-left:50px;
+				}
+				a:hover{
+				    color:#FF0000;
+				    text-decoration:underline;
+				}
+				a:hover img{
+				    opacity:0.5;
+				}
+		</style>
 	</head>
+
 	<body>
 		<div id="main">
 			<div id="header">
-				<div id="header_center">
-					<img src="https://www.ccam.org.cn/CN/static/img/11.png" alt>
-					<div id="header_center_right"  onmouseover="change()" onmouseout="reset()">
-						<div>
-							<img src="https://img95.699pic.com/xsj/18/tt/td.jpg%21/fh/300" alt>
-							<span>常见问题</span>
-						</div>
-						<div>
-							<img src="https://img1.baidu.com/it/u=3559710718,627039219&fm=253&fmt=auto&app=138&f=JPEG?w=500&h=500" alt>
-							<span>咨询客服</span>
-						</div>
+				<div>
+					<div id="logo">
+						<img src="https://www.ccam.org.cn/CN/static/img/11.png" alt="">
+					</div>
+					<div id="center">
+						<a href="https://alphaxuan.github.io/" target="_blank">藏品预览</a>
+						<div>服务支持</div>
+						<div>合作伙伴与开发者</div>
+						<div>关于动博</div>
+					</div>
+					<div id="right">
+						<img id="buy" src="http://www.youyu001.com/res/htmlLX/goumaijilu.png" alt="">
+						<span>购买周边</span>
+						<img id="arrow" src="http://www.youyu001.com/res/htmlLX/xiajiantou.png" alt="">
+						<img id="search" src="http://www.youyu001.com/res/htmlLX/sousuoxiao.png" alt="">
 					</div>
 				</div>
 			</div>
-			<div id="link">
-				<div>
-					<img src="https://www.ccam.org.cn/public/exhibition/logo/20210614200809.jpg">
-				</div>
-				<div>
-					<img src="https://www.ccam.org.cn/public/exhibition/logo/20210614201835.jpg">
-				</div>
-				<div>
-					<img src="https://www.ccam.org.cn/public/exhibition/logo/20210614202426.jpg">
-				</div>
-				<div>
-					<img src="https://www.ccam.org.cn/public/exhibition/logo/20210614202626.jpg">
-				</div>
-				<div>
-					<img src="https://www.ccam.org.cn/public/collection/s_20210528152109.jpg">
-				</div>
-				<div>
-					<img src="https://www.ccam.org.cn/public/collection/s_20210528152229.jpg">
-				</div>
-				<div>
-					<img src="https://www.ccam.org.cn/public/collection/s_20210528152759.jpg"> 
-				</div>
-				<div>
-					<img src="https://www.ccam.org.cn/public/collection/s_20210528153625.jpg">
-				</div>
-			</div>
+			<img src="https://thumbnail1.baidupcs.com/thumbnail/3f31932a4p9e7098cb78d684b0093115?fid=1100049067549-250528-961649591077145&rt=pr&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-s4%2fsTzH9CBWDRIRbtB021BbufvU%3d&expires=8h&chkbd=0&chkv=0&dp-logid=224881064627632625&dp-callid=0&time=1704873600&size=c1707_u960&quality=90&vuk=1100049067549&ft=image&autopolicy=1">
+			<img src="https://thumbnail1.baidupcs.com/thumbnail/abae15fedn7564456b1204fe8dc5ae85?fid=1100049067549-250528-428271651131821&rt=pr&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-6GlnbcThxodV8Ub2l%2bvTlgmUeo4%3d&expires=8h&chkbd=0&chkv=0&dp-logid=224881064627632625&dp-callid=0&time=1704873600&size=c1707_u960&quality=90&vuk=1100049067549&ft=image&autopolicy=1">
+			<img src="https://thumbnail1.baidupcs.com/thumbnail/ae0b21af5u2a4d3f4ff5de5d562b66be?fid=1100049067549-250528-828181870262966&rt=pr&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-Fjo8Mon%2bZYY8U9W8yb%2bpFss3iEs%3d&expires=8h&chkbd=0&chkv=0&dp-logid=224881064627632625&dp-callid=0&time=1704873600&size=c1707_u960&quality=90&vuk=1100049067549&ft=image&autopolicy=1">
+			<img src="https://thumbnail1.baidupcs.com/thumbnail/ee5055441m132168dba936076ff0ff58?fid=1100049067549-250528-424950023424142&rt=pr&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-Z4xS9K7Mb6dJA%2f%2fTtTfuYO5z5KY%3d&expires=8h&chkbd=0&chkv=0&dp-logid=224881064627632625&dp-callid=0&time=1704873600&size=c1707_u960&quality=90&vuk=1100049067549&ft=image&autopolicy=1">
+			<img src="https://thumbnail1.baidupcs.com/thumbnail/002abc301rc53f39e582407ad238b76a?fid=1100049067549-250528-327082136793776&rt=pr&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-ZpIUd7ZFPUsZR8%2bJa%2bjwuzIN8nU%3d&expires=8h&chkbd=0&chkv=0&dp-logid=224881064627632625&dp-callid=0&time=1704873600&size=c1707_u960&quality=90&vuk=1100049067549&ft=image&autopolicy=1">
+			<img src="https://thumbnail1.baidupcs.com/thumbnail/28282bd5fnc2c2e181ea9a2532ae7257?fid=1100049067549-250528-541861097739239&rt=pr&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-azs8wN4rHuBQEkHbo5gXaB7EhL0%3d&expires=8h&chkbd=0&chkv=0&dp-logid=224881064627632625&dp-callid=0&time=1704873600&size=c1707_u960&quality=90&vuk=1100049067549&ft=image&autopolicy=1">
+			<img src="https://thumbnail1.baidupcs.com/thumbnail/a63ab63a0sfdc2bc5fd3de2d74e4b7b1?fid=1100049067549-250528-818912879195441&rt=pr&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-efbKvkZwsMHXW%2b2M4KNzWPJnmGI%3d&expires=8h&chkbd=0&chkv=0&dp-logid=224881064627632625&dp-callid=0&time=1704873600&size=c1707_u960&quality=90&vuk=1100049067549&ft=image&autopolicy=1">
+			<img src="https://thumbnail1.baidupcs.com/thumbnail/4ef0ea178j63831302b67c67f2a1cba4?fid=1100049067549-250528-10840387591821&rt=pr&sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-2k8RvvbP56frJQ2ijOIft%2f3Z2ro%3d&expires=8h&chkbd=0&chkv=0&dp-logid=224881064627632625&dp-callid=0&time=1704873600&size=c1707_u960&quality=90&vuk=1100049067549&ft=image&autopolicy=1">
 		</div>
-		<div id="bg"></div>
-		<img class="close_btn" src="https://tse3-mm.cn.bing.net/th/id/OIP-C.HcGQbPO0oVS8uN9WWWvqMAAAAA?rs=1&pid=ImgDetMain" title="关闭" onclick="closeImage()" />
 	</body>
 </html>
