--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<img src="https://www.ccam.org.cn/CN/static/img/11.png" alt="">
 					</div>
 					<div id="center">
-						<a href="https://alphaxuan.github.io/" target="_blank">藏品预览</a>
+						<a href="https://alphaxuan.github.io/%E8%97%8F%E5%93%81/" target="_blank">藏品预览</a>
 						<div>服务支持</div>
 						<div>合作伙伴与开发者</div>
 						<div>关于动博</div>
