--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 			<div id="header">
 				<div>
 					<div id="logo">
-						<img src="https://www.ccam.org.cn/CN/static/img/11.png" alt="">
+						<a href="https://hifumi0721.github.io/ex44/">
+							<img src="https://www.ccam.org.cn/CN/static/img/11.png" alt="">
+						</a>
 					</div>
 					<div id="center">
 						<a href="https://alphaxuan.github.io/%E8%97%8F%E5%93%81/" target="_blank">藏品预览</a>
