--- a/藏品/index.html
+++ b/藏品/index.html
@@ -120,7 +120,9 @@
 		<div id="main">
 			<div id="header">
 				<div id="header_center">
-					<img src="https://www.ccam.org.cn/CN/static/img/11.png" alt>
+					<a href="https://hifumi0721.github.io/ex44/">
+						<img src="https://www.ccam.org.cn/CN/static/img/11.png" alt="">
+					</a>
 					<div id="header_center_right"  onmouseover="change()" onmouseout="reset()">
 						<div>
 							<img src="https://img95.699pic.com/xsj/18/tt/td.jpg%21/fh/300" alt>
