--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 					margin-left: 30px;
 				}
 				a{
+				    font-size: 15px;
 				    color:#000000;
 				    text-decoration:none;
 				    margin-left:50px;
@@ -94,10 +95,18 @@
 						</a>
 					</div>
 					<div id="center">
-						<a href="https://alphaxuan.github.io/%E8%97%8F%E5%93%81/" target="_blank">藏品预览</a>
-						<div>服务支持</div>
-						<div>合作伙伴与开发者</div>
-						<div>关于动博</div>
+						<div>
+					    		<a href="https://alphaxuan.github.io/%E8%97%8F%E5%93%81/" target="_blank">藏品预览</a>
+					  	</div>
+						<div>
+						  <a href="https://majunhangbaobao.github.io/chilun/" target="_blank">服务支持</a>
+						</div>
+						<div>
+						  <a href="https://majunhangbaobao.github.io/chilun/" target="_blank">合作伙伴与开发者</a>
+						</div>
+						<div>
+						  <a href="https://majunhangbaobao.github.io/chilun/" target="_blank">关于动博</a>
+						</div>
 					</div>
 					<div id="right">
 						<img id="buy" src="http://www.youyu001.com/res/htmlLX/goumaijilu.png" alt="">
